# ace-use-case

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py
ace/: __init__.py
ace/data/system_1/: PRE_MARA.csv  PRE_MARC.csv  PRE_T001.csv
ace/data/system_2/: PRD_AFPO.csv  PRD_AUFK.csv  PRD_MARA.csv
ace/main/: local_material.py
ace/main_scripts/: __init__.py  code_check.ipynb  local_material.py  process_order.py
ace/schemas/: __init__.py  schema_hormanization_stats.py  schemas.py
ace/utils/: __init__.py  _business_utils.py  _use_case_utils.py  use_case_utils.py
architecture/: ace_modeling.drawio  locam_material_modeling_v2.drawio  process_order-2.drawio
data/system_1/: PRE_MBEW.csv  PRE_T001K.csv  PRE_T001W.csv
data/system_2/: PRD_AFKO.csv  PRD_MARC.csv  PRD_MBEW.csv  PRD_T001.csv  PRD_T001K.csv  PRD_T001W.csv
documents/: schema_hormanization.xlsx  step-document.docx
output/: local_material.csv
tests/: conftest.py  test_utils.py
tests/samples/: iris.parquet  sample.csv  sample.json
