[options.packages.find]
where = ace

[options.entry_points]
console_scripts =  
    fitting-object = ace:main 

[tool:pytest]
testpaths = tests
markers =
    compare: mark a test as a comapre benchmark runs on data. 
addopts = -W ignore

[coverage:run]
branch=True
source=ace

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
known_firstparty = (ace)
blocked_extensions = pex,npy,jpg,ipynd,png,pdf